restructured some html code

--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,8 @@
       <div class="nav-btn">
         <a class="btn btn-sm btn-dark" id="buttonInstall" role="button">Install!</a>
       </div>
-     <h1> Jotter: Electronic Document Interface</h1>
+      <h1>Jotter: Electronic Document Interface</h1>
+      <div class="nav-btn"></div> 
     </nav>
 
     <main id="main">
